feat: Add header's nav and background image to body

--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="shortcut icon" href="assets/favicon_coffee.svg" type="image/svg+xml">
+    <title>Soul Cofee</title>
+    <link rel="shortcut icon" href="../assets/favicon_coffee.svg" type="image/svg+xml">
 </head>
 <body>
     <header>
         <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>Contact</button>
-            <button>About</button>
+            <button id="home">Home</button>
+            <button id="menu">Menu</button>
+            <button id="contact">Contact</button>
+            <button id="about">About</button>
         </nav>
     </header>
     <div id="content">
