feat: Add card to place main content
Change nav's color

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
         </nav>
     </header>
     <div id="content">
-        
+        <div id="card">
+
+        </div>
     </div>
 </body>
 </html>
