style: Change id of '#content' to '#container'

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,7 @@
             <button id="about">About</button>
         </nav>
     </header>
-    <div id="content">
-        
+    <div id="container">
     </div>
 </body>
 </html>
