--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soul Cofee</title>
-    <link rel="shortcut icon" href="../assets/favicon_coffee.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="../../assets/favicon_coffee.svg" type="image/svg+xml">
 </head>
 <body>
     <header>
